--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <meta charset="utf-8" />
 <html>
   <head>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://d3js.org/d3-array.v2.min.js"></script>
-    <script type="text/javascript" src="./js/timelineChart.js"></script>
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+    <script src="js/d3.v5.min.js"></script>
+    <script src="js/d3-array.v2.min.js"></script>
+    <!-- <script src="https://d3js.org/d3-array.v2.min.js"></script> -->
+    <script type="text/javascript" src="js/timelineChart.js"></script>
 
     <link rel="apple-touch-icon" href="./favicon.png">
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="shortcut icon" href="./favicon.png">
+    <link rel="shortcut icon" href="./favicon.ico">
     
     <style>
       body {
