--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
     <!-- <h2>ORNL Lab Agenda</h2> -->
     <div id="chart"></div>
     <!-- <img src="image/vista-logo.png" height=80 alt="ORNL VISTA Vis Lab"></img> -->
+
+    <br/><br/>
+    <center>
+      <h4>&copy; <a href="https://www.ornl.gov">Oak Ridge National Laboratory</a>
+          <script type="text/javascript">
+              document.write(new Date().getFullYear());
+          </script>
+      </h4>
+    </center>
+    <br/>
+    <br/>
   </body>
 
   <script>
