--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <table>
       <tr>
-        <td><h1>ORNL Lab Agenda Initiatives (2001-2020)</h1></td>
+        <td><h1>ORNL Lab Agenda S&amp;T Initiatives (2001-2020)</h1></td>
         <td id="logo"><img src="image/vista-logo.png" height=80 alt="ORNL VISTA Vis Lab"></img></td>
       </tr>
     </table>
