--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font: 12px sans-serif;
         margin: 4px 20px 0px 20px;
         /* background: gray; */
-        background-color: whitesmoke;
+        background-color: white;
       }
 
       table {
@@ -34,8 +34,12 @@
   <body>
     <table>
       <tr>
-        <td><h1>ORNL Lab Agenda S&amp;T Initiative Themes (2001-2020)</h1></td>
-        <td id="logo"><img src="image/vista-logo.png" height=80 alt="ORNL VISTA Vis Lab"></img></td>
+        <td>
+          <h2>ORNL Lab Agenda S&amp;T Initiative Themes (2001-2020)</h2>
+          <h3>Strategic Objective: Excellence in Science and Technology</h3>
+        </td>
+
+        <td id="logo"><img src="image/vista-logo.png" height=70 alt="ORNL VISTA Vis Lab"></img></td>
       </tr>
     </table>
     <div id="chart"></div>
