--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
           <h3>Strategic Objective: Excellence in Science and Technology</h3>
         </td>
 
-        <td id="logo"><img src="image/vista-logo.png" height=70 alt="ORNL VISTA Vis Lab"></img></td>
+        <td id="logo"><a href="https://vis.ornl.gov/" target="_blank"><img src="image/vista-logo.png" height=70 alt="ORNL VISTA Vis Lab"></img></a></td>
       </tr>
     </table>
+
+    <label for="searchText">Type to Highlight Themes: </label>
+    <input id="searchText" type="text"></input><br/><br/>
+
     <div id="chart"></div>
 
     <br/><br/>
@@ -60,10 +64,21 @@
     const chartMargin = {top:30, right:16, bottom:10, left:180};
     const chartHeight = 640;
     let chartData;
+    let chart;
+
+    const searchTextInputHandler = () => {
+      const textValue = document.getElementById("searchText").value;
+      // console.log(textValue);
+      if (chart) {
+        chart.setHighlightString(textValue);
+      }
+    };
+
+    document.getElementById('searchText').addEventListener('input', searchTextInputHandler);
 
     const createChart = () => {
       const divWidth = document.getElementById('chart').clientWidth;
-      const chart = timelineChart()
+      chart = timelineChart()
         .margin(chartMargin)
         .width(divWidth)
         .height(chartHeight);
@@ -104,10 +119,10 @@
         // data = data.filter(d => d.chad.includes("biology") || d.chad.includes("climate") || d.chad.includes("environmental"));
 
         const groupedInitiatives = d3.group(data, d => d.category);
-        console.log(groupedInitiatives);
+        // console.log(groupedInitiatives);
 
         const yearExtent = d3.extent(data, d => d.year);
-        console.log(yearExtent);
+        // console.log(yearExtent);
         
         var themes = [];
         var initiatives = [];
@@ -132,7 +147,7 @@
             years: years
           });
         });
-        console.log(initiatives);
+        // console.log(initiatives);
 
         themes.forEach(theme => {
           theme.spans = [];
@@ -167,7 +182,7 @@
           theme.start = d3.min(theme.spans.map(d => d.start));
           theme.end = d3.max(theme.spans.map(d => d.end));
         });
-        console.log(themes);
+        // console.log(themes);
 
         var initiativeGroups = [];
         initiatives.forEach(initiative => {
@@ -192,7 +207,7 @@
             otherRelatedInitiatives.map(r => grouping.includes(r) ? null : grouping.push(r));
           });
         });
-        console.log(initiativeGroups);
+        // console.log(initiativeGroups);
 
         initiativeGroups.sort((a,b) => {
           aEnd = d3.max(a, d => d3.max(d.themes, t => t.end));
