--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </tr>
     </table>
 
-    <label for="searchText">Type to Highlight Themes (use commas to highlight multiple themes): </label>
+    <label for="searchText">Type to Highlight Themes (use commas to highlight multiple themes):&nbsp;&nbsp;</label>
     <input id="searchText" type="text"></input><br/><br/>
 
     <div id="chart"></div>
