--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
       return [...related];
     }
 
-    d3.csv("data/initiatives-v5.csv", d3.autoType)
+    d3.csv("data/initiatives_v6.csv", d3.autoType)
       .then(data => {
+        // console.log(data);
         // data = data.map(d => {
         //   d.chad = d.chad.toLowerCase();
         //   return d;
@@ -109,23 +110,30 @@
         // data = data.filter(d => d.chad.includes("biology") || d.chad.includes("climate") || d.chad.includes("environmental"));
 
         const groupedInitiatives = d3.group(data, d => d.category);
-
+        // console.log(groupedInitiatives);
         const yearExtent = d3.extent(data, d => d.year);
+        // console.log(yearExtent);
         
         var themes = [];
         var initiatives = [];
         groupedInitiatives.forEach((values, initiativeName) => {
           const years = values.map(d => d.year).sort(d3.ascending);
+          const priorities = values.map(d => d.priority).sort(d3.ascending);
           const themeNames = d3.csvParseRows(initiativeName)[0].map(d => d.trim());
-          
+
           var initiativeThemes = [];
           themeNames.forEach(themeName => {
             var theme = themes.find(t => t.name === themeName);
             if (!theme) {
-              theme = { name: themeName, years: [] };
+              theme = { 
+                name: themeName, 
+                years: [],
+                priorities: values.map(d => d.priority)
+              };
               themes.push(theme);
             }
             theme.years = [...new Set(years.concat(theme.years))].sort(d3.ascending);
+            theme.priorities = [...new Set(priorities.concat(theme.priorities))].sort(d3.descending);
             initiativeThemes.push(theme);
           });
 
@@ -138,6 +146,7 @@
         // console.log(initiatives);
 
         themes.forEach(theme => {
+          theme.priority = d3.mean(theme.priorities);
           theme.spans = [];
           theme.gaps = [];
           if (theme.years.length === 1) {
@@ -195,8 +204,8 @@
             otherRelatedInitiatives.map(r => grouping.includes(r) ? null : grouping.push(r));
           });
         });
-        console.log(initiativeGroups);
-        console.log(initiatives);
+        // console.log(initiativeGroups);
+        // console.log(initiatives);
 
         initiativeGroups.sort((a,b) => {
           aEnd = d3.max(a, d => d3.max(d.themes, t => t.end));
@@ -260,35 +269,28 @@
             }
           });
         });
-        console.log(themes);
-
-        const low_priority_themes = [
-          'tech transfer',
-          'science & innovation culture',
-          'university partnerships',
-          'graduate education',
-          'cross cutting initiatives',
-          'human capital',
-          'emerging R&D'
-        ];
+        // console.log(themes);
 
         const sortThemes = (a, b) => {
-          if (low_priority_themes.includes(a.name) && low_priority_themes.includes(b.name)) {
+          // console.log(a.priority);
+          if (a.priority === b.priority) {
+          // if (low_priority_themes.includes(a.name) && low_priority_themes.includes(b.name)) {
             if (a.start === b.start) {
               return d3.descending(a.end - a.start, b.end - b.start);
             }
             return d3.ascending(a.start, b.start);
           } else {
-            if (low_priority_themes.includes(a.name)) {
-              return 1;
-            } else if (low_priority_themes.includes(b.name)) {
-              return -1;
-            } else {
-              if (a.start === b.start) {
-                return d3.descending(a.end - a.start, b.end - b.start);
-              }
-              return d3.ascending(a.start, b.start);
-            }
+            return d3.ascending(a.priority, b.priority);
+            // if (low_priority_themes.includes(a.name)) {
+            //   return 1;
+            // } else if (low_priority_themes.includes(b.name)) {
+            //   return -1;
+            // } else {
+            //   if (a.start === b.start) {
+            //     return d3.descending(a.end - a.start, b.end - b.start);
+            //   }
+            //   return d3.ascending(a.start, b.start);
+            // }
           }
         }
         var activeThemes = themes.filter(theme => theme.end > yearExtent[1]);
