--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="ui container">
         <a href="https://vis.ornl.gov" >
-          <img class="ui small centered image" src="/image/vista-logo.png">
+          <img class="ui small centered image" src="./image/vista-logo.png">
         </a>
       </div>
     <!-- <div class="ui raised very padded text container"> -->
