--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       body {
         /* font: 12px sans-serif; */
         margin: 40px 20px 0px 20px;
-        height: 100%;
+        /* height: 100%; */
         /* background: gray; */
         background-color: white;
       }
